# PNML2EGSM

./: .gitignore  README.md  main.py  pyproject.toml
PNML2EGSM/: wftree.py
PNML2EGSM/EGSM/: Component.py  Condition.py  DataFlowGuard.py  DataItem.py  DocumentRoot.py  Event.py  EventModel.py  FaultLogger.py  GuardedStageModel.py  InformationModel.py  LifecycleModel.py  Milestone.py  ProcessFlowGuard.py  Stage.py  __init__.py
PNML2EGSM/EGSM/utils/: Convert.py  Parser.py  infoModel.xsd  siena.xsl  siena_merge.xsl
