[tool.poetry]
name = "PNML2EGSM"
version = "1.0.0"
description = "A conversion program for Petri Net Modelling Language to Extended Guard Stage Milestone model format."
authors = ["Christopher Jung <s205574@dtu.dk>"]

[tool.poetry.dependencies]
python = "^3.10"
pm4py = "^2.7.4"
pyecore = "^0.13.1"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
